--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
     "robotpy-build>=2020.0.12,<2021.0.0",
-    "robotpy-wpilib>=2020.1.2.2,<2021.0.0",
+    "wpilib>=2020.1.2.2,<2021.0.0",
 ]
 
 [tool.robotpy-build]
@@ -47,5 +47,5 @@ author_email = "robotpy@googlegroups.com"
 url = "https://github.com/robotpy/robotpy-navx"
 license = "BSD-3-Clause"
 install_requires = [
-    "robotpy-wpilib>=2020.1.2.2,<2021.0.0",
+    "wpilib>=2020.1.2.2,<2021.0.0",
 ]
