--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-    "robotpy-build>=2020.2.0,<2021.0.0",
-    "wpilib>=2020.3.2.0,<2021.0.0",
+    "robotpy-build>=2020.4.0,<2021.0.0",
+    "wpilib>=2021.1.2.0,<2022.0.0",
 ]
 
 [tool.robotpy-build]
@@ -32,7 +32,7 @@ strip = 4
 
 [tool.robotpy-build.wrappers."navx"]
 name = "navx"
-depends = ["wpilibc", "wpilib_core", "wpiHal"]
+depends = ["wpilibc", "wpilib_core", "wpimath_cpp", "wpimath_geometry", "wpiHal"]
 
 sources = [
     "navx/src/rpy/navx.cpp"
@@ -52,5 +52,5 @@ author_email = "robotpy@googlegroups.com"
 url = "https://github.com/robotpy/robotpy-navx"
 license = "BSD-3-Clause"
 install_requires = [
-    "wpilib>=2020.3.2.0,<2021.0.0",
+    "wpilib>=2021.1.2.0,<2022.0.0",
 ]
