--- a/gen/AHRS.yml
+++ b/gen/AHRS.yml
@@ -396,7 +396,7 @@ classes:
 
           If not set, the default adjustment angle is 0 degrees (no adjustment).
 
-          :param adjustment: in degrees (range:  -360 to 360)
+          :param adjustment: Adjustment in degrees (range:  -360 to 360)
       GetAngleAdjustment:
         doc: |
           Returns the currently configured adjustment angle.  See
