--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ base_package = "navx"
 artifact_id = "navx-cpp"
 group_id = "com.kauailabs.navx.frc"
 repo_url = "https://repo1.maven.org/maven2"
-version = "4.0.425"
+version = "4.0.442"
 use_sources = true
 sources = [
     "AHRS.cpp",
@@ -23,7 +23,8 @@ sources = [
     "RegisterIOMau.cpp",
     "RegisterIOSPI.cpp",
     "SerialIO.cpp",
-    "SimIO.cpp"
+    "SimIO.cpp",
+    "Tracer.cpp"
 ]
 
 [tool.robotpy-build.wrappers."navx"]
