--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "robotpy-build<2023.0.0,>=2022.2.0",
+    "robotpy-build<2023.0.0,>=2022.2.1",
     "wpilib<2023.0.0,>=2022.2.1.3",
 ]
 
@@ -26,6 +26,14 @@ sources = [
     "SimIO.cpp",
     "Tracer.cpp"
 ]
+
+[[tool.robotpy-build.wrappers."navx".maven_lib_download.patches]]
+patch = "navx/src/sources.patch"
+strip = 1
+
+[[tool.robotpy-build.wrappers."navx".maven_lib_download.header_patches]]
+patch = "navx/src/ahrs.h.patch"
+strip = 2
 
 [tool.robotpy-build.wrappers."navx"]
 name = "navx"
