--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,28 @@
 [build-system]
 requires = [
-    "robotpy-build<2023.0.0,>=2022.2.1",
-    "wpilib<2023.0.0,>=2022.2.1.3",
+    "robotpy-build<2024.0.0,>=2023.0.0b14",
+    "wpilib<2024.0.0,>=2023.0.0b4",
 ]
 
 [tool.robotpy-build]
 base_package = "navx"
 
+[tool.robotpy-build.metadata]
+name = "robotpy-navx"
+description = "Python wrapper for KauaiLabs NavX sensor"
+author = "RobotPy Development Team"
+author_email = "robotpy@googlegroups.com"
+url = "https://github.com/robotpy/robotpy-navx"
+license = "BSD-3-Clause"
+install_requires = [
+    "wpilib<2024.0.0,>=2023.0.0b4",
+]
+
 [tool.robotpy-build.wrappers."navx".maven_lib_download]
-artifact_id = "navx-cpp"
+artifact_id = "navx-frc-cpp"
 group_id = "com.kauailabs.navx.frc"
-repo_url = "https://repo1.maven.org/maven2"
-version = "4.0.442"
+repo_url = "https://dev.studica.com/maven/release/2023"
+version = "2023.0.0"
 use_sources = true
 sources = [
     "AHRS.cpp",
@@ -55,14 +66,3 @@ generate = [
     # { ITimestampedDataSubscriber = "ITimestampedDataSubscriber.h" },
 ]
 generation_data = "gen"
-
-[tool.robotpy-build.metadata]
-name = "robotpy-navx"
-description = "Python wrapper for KauaiLabs NavX sensor"
-author = "RobotPy Development Team"
-author_email = "robotpy@googlegroups.com"
-url = "https://github.com/robotpy/robotpy-navx"
-license = "BSD-3-Clause"
-install_requires = [
-    "wpilib<2023.0.0,>=2022.2.1.3",
-]
