--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-    "robotpy-build<2024.0.0,>=2023.0.0b14",
-    "wpilib<2024.0.0,>=2023.0.0b7",
+    "robotpy-build<2024.0.0,>=2023.0.1",
+    "wpilib<2024.0.0,>=2023.2.1.0",
 ]
 
 [tool.robotpy-build]
@@ -15,14 +15,14 @@ author_email = "robotpy@googlegroups.com"
 url = "https://github.com/robotpy/robotpy-navx"
 license = "BSD-3-Clause"
 install_requires = [
-    "wpilib<2024.0.0,>=2023.0.0b7",
+    "wpilib<2024.0.0,>=2023.2.1.0",
 ]
 
 [tool.robotpy-build.wrappers."navx".maven_lib_download]
 artifact_id = "navx-frc-cpp"
 group_id = "com.kauailabs.navx.frc"
 repo_url = "https://dev.studica.com/maven/release/2023"
-version = "2023.0.1"
+version = "2023.0.3"
 use_sources = true
 sources = [
     "AHRS.cpp",
