Update to 2024-beta

--- a/gen/AHRS.yml
+++ b/gen/AHRS.yml
@@ -49,6 +49,21 @@ classes:
           invoking the zeroYaw() method.
 
           :returns: The current yaw value in degrees (-180 to 180).
+      GetRotation2d:
+        doc: |
+          Return the heading of the robot as a Rotation2d.
+
+          The angle is continuous, that is it will continue from 360 to 361 degrees.
+          This allows algorithms that wouldn't want to see a discontinuity in the
+          gyro output as it sweeps past from 360 to 0 on the second time around.
+
+          The angle is expected to increase as the gyro turns counterclockwise when
+          looked at from the top. It needs to follow the NWU axis convention.
+
+          :returns: the current heading of the robot as a Rotation2d. This heading is
+                    based on integration of the returned rate from the gyro.
+      GetRotation3d:
+        doc: Constructs a Rotation3d from the NavX quaternion.
       GetCompassHeading:
         doc: |
           Returns the current tilt-compensated compass heading
