--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
 [build-system]
 requires = [
     "robotpy-build<2025.0.0,~=2024.0.0",
-    "wpilib<2025.0.0,>=2024.1.1",
+    "robotpy-wpimath==2024.0.0b4",
+    "robotpy-wpiutil==2024.0.0b4",
+    "wpilib==2024.0.0b4",
 ]
 
 [tool.robotpy-build]
@@ -15,7 +17,9 @@ author_email = "robotpy@googlegroups.com"
 url = "https://github.com/robotpy/robotpy-navx"
 license = "BSD-3-Clause"
 install_requires = [
-    "wpilib<2025.0.0,>=2024.1.1",
+    "robotpy-wpimath<2025.0.0,>=2024.0.0b4",
+    "robotpy-wpiutil<2025.0.0,>=2024.0.0b4",
+    "wpilib<2025.0.0,>=2024.0.0b4",
 ]
 
 [tool.robotpy-build.wrappers."navx".maven_lib_download]
