--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 requires = [
-    "robotpy-build<2025.0.0,~=2024.0.0",
-    "robotpy-wpimath<2025.0.0,>=2024.3.2",
-    "robotpy-wpiutil<2025.0.0,>=2024.3.2",
-    "wpilib<2025.0.0,>=2024.3.2",
+    "robotpy-build<2025.0.0b1,~=2025.0.0a1",
+    "robotpy-wpiutil~=2025.0.0b1",
+    "robotpy-wpimath~=2025.0.0b1",
+    "wpilib~=2025.0.0b1",
 ]
 
 [tool.robotpy-build]
@@ -17,16 +17,16 @@ author_email = "robotpy@googlegroups.com"
 url = "https://github.com/robotpy/robotpy-navx"
 license = "BSD-3-Clause"
 install_requires = [
-    "robotpy-wpimath<2025.0.0,>=2024.3.2",
-    "robotpy-wpiutil<2025.0.0,>=2024.3.2",
-    "wpilib<2025.0.0,>=2024.3.2",
+    "robotpy-wpiutil~=2025.0.0b1",
+    "robotpy-wpimath~=2025.0.0b1",
+    "wpilib~=2025.0.0b1",
 ]
 
 [tool.robotpy-build.wrappers."navx".maven_lib_download]
-artifact_id = "navx-frc-cpp"
+artifact_id = "navx_frc-cpp"
 group_id = "com.kauailabs.navx.frc"
-repo_url = "https://dev.studica.com/maven/release/2024"
-version = "2024.1.0"
+repo_url = "https://dev.studica.com/maven/release/2025"
+version = "2025.1.1-beta-1"
 use_sources = true
 sources = [
     "AHRS.cpp",
