--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,60 +1,77 @@
 [build-system]
+build-backend = "hatchling.build"
 requires = [
-    "robotpy-build~=2025.1.0",
-    "wpilib<2026,>=2025.3.2",
+    "hatchling",
+    "hatch-vcs",
+    "semiwrap~=0.1",
+    "hatch-meson~=0.1.0b2",
+    "hatch-robotpy~=0.2.0",
+    "wpilib~=2025.3.2.2",
 ]
 
-[tool.robotpy-build]
-base_package = "navx"
 
-[tool.robotpy-build.metadata]
+[project]
 name = "robotpy-navx"
-description = "Python wrapper for KauaiLabs NavX sensor"
-author = "RobotPy Development Team"
-author_email = "robotpy@googlegroups.com"
-url = "https://github.com/robotpy/robotpy-navx"
+dynamic = ["version"]
+description = "Python wrapper for Studica NavX sensor"
 license = "BSD-3-Clause"
-install_requires = [
-    "wpilib<2026,>=2025.3.2",
+dependencies = [
+    "wpilib~=2025.3.2.2",
 ]
 
-[tool.robotpy-build.static_libs."studica_driver".maven_lib_download]
-artifact_id = "Studica-driver"
-group_id = "com.studica.frc"
-repo_url = "https://dev.studica.com/maven/release/2025"
-version = "2025.0.1"
-libs = ["StudicaDriver"]
+[[project.authors]]
+name = "RobotPy Development Team"
+email = "robotpy@googlegroups.com"
 
-[tool.robotpy-build.static_libs."studica_lib".maven_lib_download]
+[project.urls]
+"Source code" = "https://github.com/robotpy/robotpy-navx"
+
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "navx/version.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["navx"]
+
+
+[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
 artifact_id = "Studica-cpp"
 group_id = "com.studica.frc"
 repo_url = "https://dev.studica.com/maven/release/2025"
 version = "2025.0.1"
-libs = ["Studica"]
+staticlibs = ["Studica"]
+extract_to = "lib"
 
-[tool.robotpy-build.wrappers."navx"]
+[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
+artifact_id = "Studica-driver"
+group_id = "com.studica.frc"
+repo_url = "https://dev.studica.com/maven/release/2025"
+version = "2025.0.1"
+staticlibs = ["StudicaDriver"]
+extract_to = "lib"
+
+
+[tool.hatch.build.hooks.semiwrap]
+
+[tool.hatch.build.hooks.meson]
+
+
+[tool.semiwrap]
+update_init = ["navx"]
+
+[tool.semiwrap.extension_modules."navx._navx"]
 name = "navx"
+
 depends = [
-    "wpilib_core",
-    "wpimath_cpp",
-    "wpimath_geometry",
-    "wpiHal",
-    "wpilibc",
-    "wpilib_core",
-    "wpimath_cpp",
-    "wpimath_geometry",
-    "wpiHal",
-    "ntcore",
-    "wpiutil",
-    "studica_driver",
-    "studica_lib",
+    "wpilib",
 ]
 
-sources = [
-    "navx/src/rpy/navx.cpp"
+includes = [
+    "lib/include"
 ]
 
-generate = [
-    { AHRS = "studica/AHRS.h" },
-]
-generation_data = "gen"
+[tool.semiwrap.extension_modules."navx._navx".headers]
+AHRS = "studica/AHRS.h"
