--- a/semiwrap/AHRS.yml
+++ b/semiwrap/AHRS.yml
@@ -1,4 +1,3 @@
-
 extra_includes:
 - wpi/sendable/SendableHelper.h
 
@@ -10,12 +9,12 @@ classes:
       BoardAxis:
       NavXComType:
       NavXUpdateRate:
-      SerialDataType:
     methods:
       AHRS:
         overloads:
           NavXComType:
           NavXComType, NavXUpdateRate:
+          NavXComType, uint8_t:
       GetPitch:
         doc: |
           Returns the current pitch value (in degrees, from -180 to 180)
@@ -102,24 +101,6 @@ classes:
 
           :returns: Returns true if a valid update has been recently received
                     from the sensor.
-      GetByteCount:
-        doc: |
-          Returns the count in bytes of data received from the
-          sensor. This could can be useful for diagnosing
-          connectivity issues.
-
-          If the byte count is increasing, but the update count
-          (see :meth:`getUpdateCount`) is not, this indicates a software
-          misconfiguration.
-
-          :returns: The number of bytes received from the sensor.
-      GetUpdateCount:
-        doc: |
-          Returns the count of valid updates which have
-          been received from the sensor.  This count should increase
-          at the same rate indicated by the configured update rate.
-
-          :returns: The number of valid updates received from the sensor.
       GetLastSensorTimestamp:
         doc: |
           Returns the sensor timestamp corresponding to the
@@ -165,22 +146,6 @@ classes:
           body (e.g., the robot) on which the sensor is mounted.
 
           :returns: Current world linear acceleration in the Z-axis (in G).
-      IsMoving:
-        doc: |
-          Indicates if the sensor is currently detecting motion,
-          based upon the X and Y-axis world linear acceleration values.
-          If the sum of the absolute values of the X and Y axis exceed
-          a "motion threshold", the motion state is indicated.
-
-          :returns: Returns true if the sensor is currently detecting motion.
-      IsRotating:
-        doc: |
-          Indicates if the sensor is currently detecting motion,
-          based upon the X and Y-axis world linear acceleration values.
-          If the sum of the absolute values of the X and Y axis exceed
-          a "motion threshold", the motion state is indicated.
-
-          :returns: Returns true if the sensor is currently detecting motion.
       GetBarometricPressure:
         doc: |
           Returns the current barometric pressure, based upon calibrated readings
@@ -513,22 +478,6 @@ classes:
                       via the :meth:`getCompassHeading` method.
 
           :returns: Returns the mag field strength (in uTesla).
-      GetPressure:
-        doc: |
-          Returns the current barometric pressure (in millibar) [navX Aero only].
-
-          This value is valid only if a barometric pressure sensor is onboard.
-
-          :returns: Returns the current barometric pressure (in millibar).
-      GetTempC:
-        doc: |
-          Returns the current temperature (in degrees centigrade) reported by
-          the sensor's gyro/accelerometer circuit.
-
-          This value may be useful in order to perform advanced temperature-
-          correction of raw gyroscope and accelerometer values.
-
-          :returns: The current temperature (in degrees centigrade).
       GetBoardYawAxis:
         doc: |
           Returns information regarding which sensor board axis (X,Y or Z) and
@@ -551,10 +500,6 @@ classes:
           http://navx-mxp.kauailabs.com/navx-mxp/support/updating-firmware/
 
           :returns: The firmware version in the format [MajorVersion].[MinorVersion]
-      RegisterCallback:
-        ignore: true
-      DeregisterCallback:
-        ignore: true
       GetActualUpdateRate:
         doc: |
           Returns the navX-Model device's currently configured update
@@ -617,9 +562,12 @@ classes:
           of the X, Y and X-axis accelerometers.
 
           :returns: accelerometer full scale range in G.
-      Calibrate:
-        doc: |
-          Does nothing
+      GetPort:
+      ConfigureVelocity:
+      GetRobotCentricVelocityX:
+      GetRobotCentricVelocityY:
+      GetRobotCentricVelocityZ:
+      InitSendable:
   ::studica::AHRS::BoardYawAxis:
     attributes:
       board_axis:
